# usg-tftp

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ROADMAP.md  README.md  ROADMAP.md  SECURITY-COMPLIANCE.md  SIEM-INTEGRATION.md
.github/workflows/: ci.yml  release.yml
dashboards/: README.md  alert-rules.yaml  elasticsearch-alerts.json  grafana-dashboard.json  kibana-dashboard.ndjson  splunk-alerts.conf
deploy/: README.md
deploy/helm/usg-tftp/: Chart.yaml  values.yaml
deploy/helm/usg-tftp/templates/: NOTES.txt  _helpers.tpl  cilium-bgp-advertisement.yaml  cilium-bgp-clusterconfig.yaml  cilium-bgp-peerconfig.yaml  cilium-lb-ippool.yaml  configmap.yaml  deployment.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  webui-acme-ca-secret.yaml  webui-acme-pvc.yaml  webui-deployment.yaml  webui-ingress.yaml  webui-service.yaml
docs/: BENCHMARK_README.md  BUILD_STATUS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  IPV6_SUPPORT.md  PERFORMANCE_CHANGELOG.md  PERFORMANCE_ROADMAP.md  PHASE2_NOTES.md  PHASE3_DESIGN.md  PHASE4_DESIGN.md  PHASE4_PROGRESS.md  SECURITY-COMPLIANCE.md  SIEM-INTEGRATION.md  WINDOWSIZE_PERFORMANCE_ANALYSIS.md  elastic-setup.md  integration-testing.md  performance-comparison.md  performance-optimizations.md  rfc-compliance-improvements.md  write-operations.md
docs/rfc-compliance/: RFC7440_IMPLEMENTATION_SUMMARY.md  RFC7440_WINDOWSIZE.md
examples/: phase1-optimized.toml  phase2-optimized.toml
infra-build/: Containerfile  Containerfile.webui
src/: audit.rs  buffer_pool.rs  config.rs  error.rs  lib.rs  main.rs  multicast.rs  path_security.rs  worker_pool.rs
src/web/: audit.rs  handlers.rs  mod.rs  models.rs  proxy_protocol.rs  static_files.rs  tls.rs
tests/: .gitignore  BENCHMARK_RESULTS.md  COMMIT_INSTRUCTIONS.md  DEBUG_RECVMMSG.md  Dockerfile  Dockerfile.bench  Dockerfile.integration  FINAL_RESULTS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  SESSION_SUMMARY.md  TESTING_INSTRUCTIONS.md  WINDOWSIZE_TESTS.md  benchmark-phase2.sh  benchmark-phase4.sh  docker-compose.yml  integration-test.sh  run-all-tests.sh  run-docker-tests.sh  syscall-counter.bt  windowsize-analyzer.py  windowsize-test.sh
tests/integration-test/: server-config.toml
tests/integration-test/client-downloads/: hello.txt
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: AuditLog.tsx  CreateFolderModal.tsx  DeleteModal.tsx  FileBrowser.tsx  FilePreview.tsx  FileUpload.tsx  Layout.tsx  ServerInfo.tsx
web/src/hooks/: useFileBrowser.ts  useUpload.ts
