[package]
name = "snow-owl-tftp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tracing-appender = "0.2"
libc = "0.2"
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
glob = "0.3"

# Phase 1 Performance Optimizations
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.30", features = ["socket", "fs", "net", "uio"] }

# Phase 4: Worker Thread Pool
num_cpus = "1.16"
