[package]
name = "usg-tftp"
version = "0.1.0"
edition = "2024"
authors = ["USG TFTP Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/192d-Wing/usg-tftp"

# Server binary
[[bin]]
name = "usg-tftp-server"
path = "src/bin/server.rs"

# Client binary
[[bin]]
name = "usg-tftp-client"
path = "src/bin/client.rs"

[lib]
name = "usg_tftp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
bytes = "1.7"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tracing-appender = "0.2"
libc = "0.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
glob = "0.3"

# Phase 1 Performance Optimizations
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.30", features = ["socket", "fs", "net", "uio"] }

# Phase 4: Worker Thread Pool
num_cpus = "1.16"
