[package]
name = "usg-tftp"
version = "0.1.13"
edition = "2024"
authors = ["USG TFTP Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/192d-Wing/usg-tftp"

# Server binary
[[bin]]
name = "usg-tftp-server"
path = "src/bin/server.rs"

# Client binary
[[bin]]
name = "usg-tftp-client"
path = "src/bin/client.rs"

# Web UI binary
[[bin]]
name = "usg-tftp-webui"
path = "src/bin/webui.rs"
required-features = ["webui"]

[lib]
name = "usg_tftp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
bytes = "1.7"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tracing-appender = "0.2"
libc = "0.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
glob = "0.3"

# Phase 1 Performance Optimizations
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.30", features = ["socket", "fs", "net", "uio"] }

# Phase 4: Worker Thread Pool
num_cpus = "1.16"

# Web UI
axum = { version = "0.8", features = ["multipart"], optional = true }
axum-server = { version = "0.8", features = ["tls-rustls"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
rust-embed = { version = "8", features = ["compression"], optional = true }
mime_guess = { version = "2", optional = true }
rustls-acme = { version = "0.15", features = ["axum", "tower"], optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
tokio-rustls = { version = "0.26", optional = true }
hyper = { version = "1", features = ["server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"], optional = true }
futures-lite = { version = "2", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
http = { version = "1", optional = true }

[features]
default = []
webui = ["axum", "axum-server", "tower-http", "rust-embed", "mime_guess", "rustls-acme", "rustls", "rustls-pemfile", "tokio-rustls", "hyper", "hyper-util", "futures-lite", "tower", "http"]
